@@ -16,25 +16,26 @@
 package com.github.tomakehurst.wiremock.common;
 
 import static com.github.tomakehurst.wiremock.common.Exceptions.throwUnchecked;
-import static com.google.common.collect.FluentIterable.from;
+import static java.nio.charset.StandardCharsets.UTF_8;
 
 import com.github.tomakehurst.wiremock.http.QueryParameter;
-import com.google.common.base.Joiner;
-import com.google.common.base.Splitter;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableListMultimap;
-import com.google.common.collect.Iterables;
+import com.google.common.collect.ImmutableListMultimap.Builder;
 import com.google.common.collect.Maps;
-import java.io.UnsupportedEncodingException;
 import java.net.MalformedURLException;
 import java.net.URI;
 import java.net.URL;
 import java.net.URLDecoder;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class Urls {
+
+  private Urls() {}
 
   public static Map<String, QueryParameter> splitQueryFromUrl(String url) {
     String queryPart =
@@ -56,8 +57,8 @@ public class Urls {
       return Collections.emptyMap();
     }
 
-    Iterable<String> pairs = Splitter.on('&').split(query);
-    ImmutableListMultimap.Builder<String, String> builder = ImmutableListMultimap.builder();
+    List<String> pairs = Arrays.stream(query.split("&")).collect(Collectors.toList());
+    Builder<String, String> builder = ImmutableListMultimap.builder();
     for (String queryElement : pairs) {
       int firstEqualsIndex = queryElement.indexOf('=');
       if (firstEqualsIndex == -1) {
@@ -83,18 +84,17 @@ public class Urls {
   }
 
   public static String urlToPathParts(URI uri) {
-    Iterable<String> uriPathNodes = Splitter.on("/").omitEmptyStrings().split(uri.getPath());
-    int nodeCount = Iterables.size(uriPathNodes);
+    List<String> uriPathNodes =
+        Arrays.stream(uri.getPath().split("/"))
+            .filter(s -> !s.isEmpty())
+            .collect(Collectors.toUnmodifiableList());
+    int nodeCount = uriPathNodes.size();
 
-    return nodeCount > 0 ? Joiner.on("-").join(from(uriPathNodes)) : "";
+    return nodeCount > 0 ? String.join("-", uriPathNodes) : "";
   }
 
   public static String decode(String encoded) {
-    try {
-      return URLDecoder.decode(encoded, "utf-8");
-    } catch (UnsupportedEncodingException e) {
-      return throwUnchecked(e, String.class);
-    }
+    return URLDecoder.decode(encoded, UTF_8);
   }
 
   public static URL safelyCreateURL(String url) {
@@ -108,5 +108,13 @@ public class Urls {
   // Workaround for a Jetty bug that appends "null" onto the end of the URL
   private static String clean(String url) {
     return url.matches(".*:[0-9]+null$") ? url.substring(0, url.length() - 4) : url;
+  }
+
+  public static int getPort(URL url) {
+    if (url.getPort() == -1) {
+      return url.getProtocol().equals("https") ? 443 : 80;
+    }
+
+    return url.getPort();
   }
 }
