@@ -16,11 +16,10 @@
 package com.github.tomakehurst.wiremock.matching;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.anyUrl;
+import static com.github.tomakehurst.wiremock.common.ParameterUtils.getFirstNonNull;
 import static com.github.tomakehurst.wiremock.matching.RequestMatcherExtension.NEVER;
 import static com.github.tomakehurst.wiremock.matching.RequestPatternBuilder.newRequestPattern;
 import static com.github.tomakehurst.wiremock.matching.WeightedMatchResult.weight;
-import static com.google.common.base.MoreObjects.firstNonNull;
-import static com.google.common.collect.FluentIterable.from;
 import static com.google.common.net.HttpHeaders.AUTHORIZATION;
 import static java.util.Arrays.asList;
 import static java.util.stream.Collectors.toList;
@@ -29,7 +28,6 @@ import com.fasterxml.jackson.annotation.JsonCreator;
 import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonProperty;
 import com.github.tomakehurst.wiremock.client.BasicCredentials;
-import com.github.tomakehurst.wiremock.client.WireMock;
 import com.github.tomakehurst.wiremock.common.Json;
 import com.github.tomakehurst.wiremock.common.url.PathParams;
 import com.github.tomakehurst.wiremock.common.url.PathTemplate;
@@ -37,10 +35,11 @@ import com.github.tomakehurst.wiremock.http.Cookie;
 import com.github.tomakehurst.wiremock.http.Request;
 import com.github.tomakehurst.wiremock.http.RequestMethod;
 import com.github.tomakehurst.wiremock.stubbing.ServeEvent;
-import com.google.common.base.Function;
-import com.google.common.base.Predicate;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableMap.Builder;
 import java.util.*;
+import java.util.function.Function;
+import java.util.function.Predicate;
 import org.apache.commons.lang3.StringUtils;
 
 public class RequestPattern implements NamedValueMatcher<Request> {
@@ -54,6 +53,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   private final Map<String, StringValuePattern> pathParams;
   private final Map<String, MultiValuePattern> queryParams;
+  private final Map<String, MultiValuePattern> formParams;
   private final Map<String, StringValuePattern> cookies;
   private final BasicCredentials basicAuthCredentials;
   private final List<ContentPattern<?>> bodyPatterns;
@@ -72,6 +72,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
       final Map<String, MultiValuePattern> headers,
       final Map<String, StringValuePattern> pathParams,
       final Map<String, MultiValuePattern> queryParams,
+      final Map<String, MultiValuePattern> formParams,
       final Map<String, StringValuePattern> cookies,
       final BasicCredentials basicAuthCredentials,
       final List<ContentPattern<?>> bodyPatterns,
@@ -81,10 +82,11 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     this.scheme = scheme;
     this.host = host;
     this.port = port;
-    this.url = firstNonNull(url, UrlPattern.ANY);
-    this.method = firstNonNull(method, RequestMethod.ANY);
+    this.url = getFirstNonNull(url, UrlPattern.ANY);
+    this.method = getFirstNonNull(method, RequestMethod.ANY);
     this.headers = headers;
     this.pathParams = pathParams;
+    this.formParams = formParams;
     this.queryParams = queryParams;
     this.cookies = cookies;
     this.basicAuthCredentials = basicAuthCredentials;
@@ -108,6 +110,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
                         weight(allPathParamsMatch(request)),
                         weight(allHeadersMatchResult(request)),
                         weight(allQueryParamsMatch(request)),
+                        weight(allFormParamsMatch(request)),
                         weight(allCookiesMatch(request)),
                         weight(allBodyPatternsMatch(request)),
                         weight(allMultipartPatternsMatch(request))));
@@ -140,6 +143,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
       @JsonProperty("headers") Map<String, MultiValuePattern> headers,
       @JsonProperty("pathParameters") Map<String, StringValuePattern> pathParams,
       @JsonProperty("queryParameters") Map<String, MultiValuePattern> queryParams,
+      @JsonProperty("formParameters") Map<String, MultiValuePattern> formParams,
       @JsonProperty("cookies") Map<String, StringValuePattern> cookies,
       @JsonProperty("basicAuth") BasicCredentials basicAuthCredentials,
       @JsonProperty("bodyPatterns") List<ContentPattern<?>> bodyPatterns,
@@ -155,6 +159,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         headers,
         pathParams,
         queryParams,
+        formParams,
         cookies,
         basicAuthCredentials,
         bodyPatterns,
@@ -163,13 +168,14 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         multiPattern);
   }
 
-  public static RequestPattern ANYTHING =
+  public static final RequestPattern ANYTHING =
       new RequestPattern(
           null,
           null,
           null,
-          WireMock.anyUrl(),
+          anyUrl(),
           RequestMethod.ANY,
+          null,
           null,
           null,
           null,
@@ -194,6 +200,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         null,
         null,
         null,
+        null,
         customMatcher,
         null);
   }
@@ -211,6 +218,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
         null,
         null,
         null,
+        null,
         customMatcherDefinition,
         null,
         null);
@@ -218,7 +226,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   @Override
   public MatchResult match(Request request) {
-    return match(request, Collections.<String, RequestMatcherExtension>emptyMap());
+    return match(request, Collections.emptyMap());
   }
 
   public static RequestPattern everything() {
@@ -228,7 +236,7 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   public MatchResult match(Request request, Map<String, RequestMatcherExtension> customMatchers) {
     if (customMatcherDefinition != null) {
       RequestMatcherExtension requestMatcher =
-          firstNonNull(customMatchers.get(customMatcherDefinition.getName()), NEVER);
+          getFirstNonNull(customMatchers.get(customMatcherDefinition.getName()), NEVER);
 
       MatchResult standardMatchResult = matcher.match(request);
       MatchResult customMatchResult =
@@ -243,37 +251,23 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   private MatchResult allCookiesMatch(final Request request) {
     if (cookies != null && !cookies.isEmpty()) {
       return MatchResult.aggregate(
-          from(cookies.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, StringValuePattern>, MatchResult>() {
-                    public MatchResult apply(
-                        final Map.Entry<String, StringValuePattern> cookiePattern) {
-                      Cookie cookie = request.getCookies().get(cookiePattern.getKey());
-                      if (cookie == null) {
-                        return cookiePattern.getValue().nullSafeIsAbsent()
-                            ? MatchResult.exactMatch()
-                            : MatchResult.noMatch();
-                      }
-
-                      return from(cookie.getValues())
-                          .transform(
-                              new Function<String, MatchResult>() {
-                                @Override
-                                public MatchResult apply(String cookieValue) {
-                                  return cookiePattern.getValue().match(cookieValue);
-                                }
-                              })
-                          .toSortedList(
-                              new Comparator<MatchResult>() {
-                                @Override
-                                public int compare(MatchResult o1, MatchResult o2) {
-                                  return o2.compareTo(o1);
-                                }
-                              })
-                          .get(0);
+          cookies.entrySet().stream()
+              .map(
+                  entry -> {
+                    final StringValuePattern cookiePattern = entry.getValue();
+                    Cookie cookie = request.getCookies().get(entry.getKey());
+                    if (cookie == null) {
+                      return cookiePattern.nullSafeIsAbsent()
+                          ? MatchResult.exactMatch()
+                          : MatchResult.noMatch();
                     }
+
+                    return cookie.getValues().stream()
+                        .map(cookiePattern::match)
+                        .max(Comparator.naturalOrder())
+                        .orElse(MatchResult.noMatch());
                   })
-              .toList());
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -298,14 +292,11 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
     if (combinedHeaders != null && !combinedHeaders.isEmpty()) {
       return MatchResult.aggregate(
-          from(combinedHeaders.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(Map.Entry<String, MultiValuePattern> headerPattern) {
-                      return headerPattern.getValue().match(request.header(headerPattern.getKey()));
-                    }
-                  })
-              .toList());
+          combinedHeaders.entrySet().stream()
+              .map(
+                  headerPattern ->
+                      headerPattern.getValue().match(request.header(headerPattern.getKey())))
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -317,10 +308,9 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     }
 
     Map<String, MultiValuePattern> combinedHeaders = headers;
-    ImmutableMap.Builder<String, MultiValuePattern> allHeadersBuilder =
+    Builder<String, MultiValuePattern> allHeadersBuilder =
         ImmutableMap.<String, MultiValuePattern>builder()
-            .putAll(
-                firstNonNull(combinedHeaders, Collections.<String, MultiValuePattern>emptyMap()));
+            .putAll(getFirstNonNull(combinedHeaders, Collections.emptyMap()));
     allHeadersBuilder.put(AUTHORIZATION, basicAuthCredentials.asAuthorizationMultiValuePattern());
     combinedHeaders = allHeadersBuilder.build();
     return combinedHeaders;
@@ -329,17 +319,28 @@ public class RequestPattern implements NamedValueMatcher<Request> {
   private MatchResult allQueryParamsMatch(final Request request) {
     if (queryParams != null && !queryParams.isEmpty()) {
       return MatchResult.aggregate(
-          from(queryParams.entrySet())
-              .transform(
-                  new Function<Map.Entry<String, MultiValuePattern>, MatchResult>() {
-                    public MatchResult apply(
-                        Map.Entry<String, MultiValuePattern> queryParamPattern) {
-                      return queryParamPattern
+          queryParams.entrySet().stream()
+              .map(
+                  queryParamPattern ->
+                      queryParamPattern
                           .getValue()
-                          .match(request.queryParameter(queryParamPattern.getKey()));
-                    }
-                  })
-              .toList());
+                          .match(request.queryParameter(queryParamPattern.getKey())))
+              .collect(toList()));
+    }
+
+    return MatchResult.exactMatch();
+  }
+
+  private MatchResult allFormParamsMatch(final Request request) {
+    if (formParams != null && !formParams.isEmpty()) {
+      return MatchResult.aggregate(
+          formParams.entrySet().stream()
+              .map(
+                  formParamPattern ->
+                      formParamPattern
+                          .getValue()
+                          .match(request.formParameter(formParamPattern.getKey())))
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -365,47 +366,37 @@ public class RequestPattern implements NamedValueMatcher<Request> {
     return MatchResult.exactMatch();
   }
 
-  @SuppressWarnings("unchecked")
+  @SuppressWarnings({"unchecked", "rawtypes"})
   private MatchResult allBodyPatternsMatch(final Request request) {
     if (bodyPatterns != null && !bodyPatterns.isEmpty() && request.getBody() != null) {
       return MatchResult.aggregate(
-          from(bodyPatterns)
-              .transform(
-                  new Function<ContentPattern, MatchResult>() {
-                    @Override
-                    public MatchResult apply(ContentPattern pattern) {
-                      if (StringValuePattern.class.isAssignableFrom(pattern.getClass())) {
-                        String body =
-                            StringUtils.isEmpty(request.getBodyAsString())
-                                ? null
-                                : request.getBodyAsString();
-                        return pattern.match(body);
-                      }
+          bodyPatterns.stream()
+              .map(
+                  (Function<ContentPattern, MatchResult>)
+                      pattern -> {
+                        if (StringValuePattern.class.isAssignableFrom(pattern.getClass())) {
+                          String body =
+                              StringUtils.isEmpty(request.getBodyAsString())
+                                  ? null
+                                  : request.getBodyAsString();
+                          return pattern.match(body);
+                        }
 
-                      return pattern.match(request.getBody());
-                    }
-                  })
-              .toList());
+                        return pattern.match(request.getBody());
+                      })
+              .collect(toList()));
     }
 
     return MatchResult.exactMatch();
   }
 
-  @SuppressWarnings("unchecked")
   private MatchResult allMultipartPatternsMatch(final Request request) {
     if (multipartPatterns != null && !multipartPatterns.isEmpty()) {
       if (!request.isMultipart()) {
         return MatchResult.noMatch();
       }
       return MatchResult.aggregate(
-          from(multipartPatterns)
-              .transform(
-                  new Function<MultipartValuePattern, MatchResult>() {
-                    public MatchResult apply(MultipartValuePattern pattern) {
-                      return pattern.match(request);
-                    }
-                  })
-              .toList());
+          multipartPatterns.stream().map(pattern -> pattern.match(request)).collect(toList()));
     }
 
     return MatchResult.exactMatch();
@@ -479,6 +470,10 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   public Map<String, MultiValuePattern> getQueryParameters() {
     return queryParams;
+  }
+
+  public Map<String, MultiValuePattern> getFormParameters() {
+    return formParams;
   }
 
   public Map<String, StringValuePattern> getCookies() {
@@ -575,20 +570,10 @@ public class RequestPattern implements NamedValueMatcher<Request> {
 
   public static Predicate<Request> thatMatch(
       final RequestPattern pattern, final Map<String, RequestMatcherExtension> customMatchers) {
-    return new Predicate<Request>() {
-      @Override
-      public boolean apply(Request request) {
-        return pattern.match(request, customMatchers).isExactMatch();
-      }
-    };
+    return request -> pattern.match(request, customMatchers).isExactMatch();
   }
 
-  public static Predicate<ServeEvent> withRequstMatching(final RequestPattern pattern) {
-    return new Predicate<ServeEvent>() {
-      @Override
-      public boolean apply(ServeEvent serveEvent) {
-        return pattern.match(serveEvent.getRequest()).isExactMatch();
-      }
-    };
+  public static Predicate<ServeEvent> withRequestMatching(final RequestPattern pattern) {
+    return serveEvent -> pattern.match(serveEvent.getRequest()).isExactMatch();
   }
 }
